2009-05-23  Bruno Haible  <bruno@clisp.org>

	* configure.ac (AM_INIT_AUTOMAKE): Add 'silent-rules' option.

2009-05-23  Bruno Haible  <bruno@clisp.org>

	* m4/init-package-version.m4: New file, from GNU gettext..
	* configure.ac: Invoke gl_INIT_PACKAGE. Use the preferred form of
	AM_INIT_AUTOMAKE.

2009-05-21  Bruno Haible  <bruno@clisp.org>

	Colored "make check" output.
	* tests/Makefile.am (AUTOMAKE_OPTIONS): Add 1.11 and color-tests.
	* autogen.sh: Update comment.

2009-05-21  Bruno Haible  <bruno@clisp.org>

	Add support for automake 1.11.
	* m4/fixautomake.m4: Update from GNU gettext.
	* autogen.sh: Update comment.

2009-05-10  Bruno Haible  <bruno@clisp.org>

	* doc/unictype.texi (Mirrored character): Fix typo.
	Reported by David Byron <dbyron@dbyron.com>.

2009-05-10  Bruno Haible  <bruno@clisp.org>

	* doc/unicase.texi (Case mappings of characters,
	Case mappings of strings): Explain what title case is.
	Reported by Paolo Bonzini.

2009-05-06  Bruno Haible  <bruno@clisp.org>

	* doc/libunistring.texi (texnl): Define using a trick by Karl Berry.
	Add braces to all its uses.
	* doc/unictype.texi: Likewise.
	* doc/uniwbrk.texi: Likewise.

2009-05-03  Bruno Haible  <bruno@clisp.org>

	* lib/Makefile.am (config.h): Echo the commands that are being
	executed.
	Reported by Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>.

2009-05-03  Bruno Haible  <bruno@clisp.org>

	* HACKING (Building): Mention also the configure option
	--disable-static.

2009-05-03  Bruno Haible  <bruno@clisp.org>

	New configure option --disable-namespacing.
	* configure.ac: New option --disable-namespacing.
	(NAMESPACING): New substituted variable.
	* lib/Makefile.am (config.h): Don't alias any symbols if NAMESPACING is
	set to empty.
	* HACKING: New section "Building".

2009-05-01  Bruno Haible  <bruno@clisp.org>

	* doc/libunistring.texi: Enable the table of contents also in TeX mode.

2009-05-01  Bruno Haible  <bruno@clisp.org>

	Avoid "overfull hboxes" in the TeXed documentation.